test_data/Json/Unexpected/Unserializable/InvalidModelType/Entity/wrong.json.exception
Expected the model type 'Entity', but got soReallyUtterlyInvalid at: modelType